--- a/todo-index.html
+++ b/todo-index.html
@@ -2,7 +2,7 @@
     <head>
         <title>To-Do App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style1.css" rel="stylesheet"/>
+        <link href="todo-style.css" rel="stylesheet"/>
         <style>    
             @media (max-width: 725px)
             {
@@ -32,6 +32,6 @@
             </li> -->
             </ul>
         </main> 
-        <script src="todo1.js"></script>
+        <script src="todo-script.js"></script>
      </body>
 </html>
